<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToPadding="false"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Controllers.LoginActivity">

        <ImageView
            android:id="@+id/loginImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/loginimageview"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/authbackground" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/commerce"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/usernameInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_username"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textCursorDrawable="@drawable/cursor_white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textCursorDrawable="@drawable/cursor_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_click"
            android:fontFamily="serif"
            android:onClick="clickedLogin"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <Button
            android:id="@+id/navRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="serif"
            android:onClick="navigateRegister"
            android:text="@string/register_navigate"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/forgotPasswordTxt"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/usernameInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>