<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToPadding="false"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/registerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorApp"
        tools:context=".Controller.RegisterActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="serif"
            android:text="@string/register_for_commerce"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_username"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/username"
            android:inputType="textImeMultiLine|textPersonName"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textSize="14sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textSize="14sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

        <TextView
            android:id="@+id/informationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="serif"
            android:text="@string/information"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <EditText
            android:id="@+id/firstnameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_info"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/first_name"
            android:inputType="textImeMultiLine|textPersonName"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textSize="14sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/informationText" />

        <EditText
            android:id="@+id/lastnameInput"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_info"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/last_name"
            android:inputType="textImeMultiLine|textPersonName"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textSize="14sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstnameInput" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_mail"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textSize="14sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastnameInput" />

        <EditText
            android:id="@+id/telInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorAppTransparent"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_smartphone"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/tel"
            android:inputType="phone"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAppGray"
            android:textColorLink="@android:color/white"
            android:textSize="14sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:background="@color/colorAppMain"
            android:fontFamily="serif"
            android:onClick="clickedRegister"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telInput" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="serif"
            android:onClick="navigateLogin"
            android:text="@string/have_account_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>