<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPasswordConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.ForgotPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/forgotPasswordToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/forgot_password_header"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/forgotPasswordToolbar"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordToolbar"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordToolbar"
        app:layout_constraintTop_toTopOf="@+id/forgotPasswordToolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/colorApp"
        app:hintTextAppearance="@style/AppThemeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordToolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/forgotEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_email_address"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/colorApp"
            android:textColorHint="@color/colorApp"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmailText" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAppMain"
        android:fontFamily="serif"
        android:onClick="clickedConfirm"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</android.support.constraint.ConstraintLayout>